fixed image distortion for sponsor logos

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -449,13 +449,19 @@ li.active strong , p.active strong, .chooser li:hover strong  {
 }
 
 .sponsor-image {
-    width: 80%;
+    max-width: 80%;
     max-height: 80%;
     position: absolute;
     top: 50%;
     left: 50%;
-    margin: auto;
+    /*margin: auto;*/
     transform: translate(-50%, -50%)
+}
+
+.sponsor-image{
+    display: block;
+    width: auto;
+    height: auto;
 }
 
 .img-ratio {
